Added a link to the GitHub repo

--- a/kb.html
+++ b/kb.html
@@ -189,11 +189,12 @@ All rights reserved.
 	
 <div id="footer">
 <div class="container">
-	<p class="text-muted credit">
+	<p class="text-muted credit" style="float:left">
 		Keyboard Layout Editor v{{version}}<br/>
 		Copyright &copy; 2013 &mdash; Ian Prest<br/>
 		All rights reserved.
 	</p>
+	<div style="float:right"><br/><br/><a href="https://github.com/ijprest/keyboard-layout-editor"><i class="icon-github"></i> Code hosted on GitHub</a></div>
 </div>
 </div>	
 	
