--- a/kb.html
+++ b/kb.html
@@ -52,7 +52,7 @@ All rights reserved.
 	
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav navbar-right">
-			<li><a ng-href="{{getPermalink()}}">Permalink</a></li>
+			<li><a ng-href="{{getPermalink()}}"><i class="icon-link"></i> Permalink</a></li>
 		</ul>
 	</div>
 </nav>
