Added a <title> to the HTML page.

--- a/kb.html
+++ b/kb.html
@@ -6,6 +6,7 @@ All rights reserved.
 <!DOCTYPE html>
 <html ng-app="kbApp">
 <head>
+<title>Keyboard Layout Editor</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="screen">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
