--- a/kb.html
+++ b/kb.html
@@ -18,6 +18,7 @@ All rights reserved.
 <script type="text/javascript" src="js/ui-utils.min.js"></script>
 <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/urlon.js"></script>
 <script type="text/javascript" src="kb.js"></script>
 </head>
 <body ng-controller="kbCtrl"
