Gave the help link an HREF so we get the correct cursor.

--- a/kb.html
+++ b/kb.html
@@ -213,7 +213,7 @@ All rights reserved.
 		All rights reserved.
 	</p>
 	<div style="float:right; text-alignment:right;">
-		<a ng-click="showHelp()"><i class="icon-keyboard"></i> Keyboard shortcuts available</a><br/>
+		<a href="#" ng-click="showHelp()"><i class="icon-keyboard"></i> Keyboard shortcuts available</a><br/>
 		<br/>
 		<a href="https://github.com/ijprest/keyboard-layout-editor" target="_blank"><i class="icon-github"></i> Code hosted on GitHub</a>
 	</div>
