Using the correct icon for "redo".

--- a/kb.html
+++ b/kb.html
@@ -84,7 +84,7 @@ All rights reserved.
 	</div>
 	<div class="btn-group">
 		<button type="button" class="btn btn-default" ng-class="{disabled:!canUndo()}" ng-click="undo()"><i class="icon-undo"></i> Undo</button>
-		<button type="button" class="btn btn-default" ng-class="{disabled:!canRedo()}" ng-click="redo()"><i class="icon-undo mirrored" style="display:inline-block;"></i> Redo</button>
+		<button type="button" class="btn btn-default" ng-class="{disabled:!canRedo()}" ng-click="redo()"><i class="icon-repeat"></i> Redo</button>
 	</div>
 	
 	<div id="keyboard" 
