Reset the dirty flag if the permalink link is clicked.

--- a/kb.html
+++ b/kb.html
@@ -57,7 +57,7 @@ All rights reserved.
 	
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav navbar-right">
-			<li><a ng-href="{{getPermalink()}}" target="_blank"><i class="icon-link"></i> Permalink</a></li>
+			<li><a ng-href="{{getPermalink()}}" target="_blank" ng-click="dirty = false"><i class="icon-link"></i> Permalink</a></li>
 		</ul>
 	</div>
 </nav>
