Added some helper text to the color palette.
-- it wasn't obvious what to do with the swatches in the palette

--- a/kb.html
+++ b/kb.html
@@ -217,6 +217,10 @@ All rights reserved.
 						 class="swatch hint--top"
 						 data-hint="{{color.name}}"></li>
 				</ul>
+				<div class="alert alert-warning alert-dismissable" style="margin-top:10px;"><a class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</a>
+					<i class="icon-exclamation-sign"></i>
+					Click on a swatch to set the color of the selected key(s), or Ctrl+Click to set the text color.
+				</div>
 			</div>
 		</div>
 
