Prevent default behaviour on Ctrl+A
-- only seemed to be a problem in FireFox

--- a/kb.html
+++ b/kb.html
@@ -111,7 +111,7 @@ All rights reserved.
 					 'shift-75': 'nextKey($event)',
 					 113: 'focusEditor()',
 					 esc: 'unselectAll()',
-					 'ctrl-65': 'selectAll()',
+					 'ctrl-65': 'selectAll($event)',
 					 'ctrl-67 ctrl-45': 'copy($event)',
 					 'ctrl-88 shift-46': 'cut($event)',
 					 'ctrl-86 shift-45': 'paste($event)',
